--- a/src/CTA/Views/Home/Index.cshtml
+++ b/src/CTA/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
 }
                
 
-<div id="con" onclick="getimage()">
+<div id="con">
     Тут будет картинка:)
 </div>
 <div class="row contents">
