--- a/src/CTA/Views/Home/Index.cshtml
+++ b/src/CTA/Views/Home/Index.cshtml
@@ -8,11 +8,7 @@
 {
         @if (User.Identity.Name != null)
         {
-            <ul class="nav navbar-nav navbar-right">
-                <li>
-                    <p class="navbar-text">Добро пожаловать, пользователь!</p>
-                </li>
-            </ul>
+            @Html.Partial("UserCabPartial");
         }
         else
         {
@@ -27,32 +23,38 @@
 <div class="row contents">
 </div>
 
+
+
 @section scripts
 {
-    <script type="text/javascript">
-        $(function () {
-            $('.btn.btn-primary.btn-block').click(function (e) {
-                e.preventDefault();
-                var data = {
-                    UserName: $('#username').val(),
-                    Password: $('#password').val(),
-                    RememberMe: true
-                };
-
-                $.ajax({
-                    type: 'POST',
-                    url: '/api/session',
-                    contentType: 'application/json;charset=utf-8',
-                    data: JSON.stringify(data)
-                }).success(function (dat) {
-                    location.reload();
-                }).fail(function (err) {
-                    alert(answer.value.description);
-                });
-            })
-
-        })
-    </script>
+    <link href="/css/noty.css" rel="stylesheet" />
     <script type="text/javascript" src="/js/jquery.cloudinary.js"></script>
     <script type="text/javascript" src="/js/lots-loader.js"></script>
+    <script src="/js/noty.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        $('#sign-in').click(function (e) {
+            e.preventDefault();
+
+            new Noty({
+                text: 'Some notification text'
+            }).show();
+            
+            /*  var data = {
+                  UserName: $('#username').val(),
+                  Password: $('#password').val(),
+                  RememberMe: true
+              };
+      
+              $.ajax({
+                  type: 'POST',
+                  url: '/api/session',
+                  contentType: 'application/json;charset=utf-8',
+                  data: JSON.stringify(data)
+              }).success(function (dat) {
+                  location.reload();
+              }).fail(function (err) {
+                  alert(err.value.description);
+              });*/
+        });
+    </script>
 }
