--- a/src/CTA/Views/Shared/LoginPartial.cshtml
+++ b/src/CTA/Views/Shared/LoginPartial.cshtml
@@ -19,7 +19,7 @@
                                 <div class="help-block text-right"><a href="">Forget the password ?</a></div>
                             </div>
                             <div class="form-group">
-                                <button type="submit" class="btn btn-primary btn-block">Sign in</button>
+                                <button type="submit" id="sign-in" class="btn btn-primary btn-block">Sign in</button>
                             </div>
                             <div class="checkbox">
                                 <label>
@@ -29,7 +29,7 @@
                         </form>
                     </div>
                     <div class="bottom text-center">
-                        New here ? <a href="#"><b>Join Us</b></a>
+                        New here ? <a href="/registration" target="_blank"><b>Join Us</b></a>
                     </div>
                 </div>
             </li>
