--- a/src/CTA/Views/Shared/LoginPartial.cshtml
+++ b/src/CTA/Views/Shared/LoginPartial.cshtml
@@ -19,7 +19,8 @@
                                 <div class="help-block text-right"><a href="">Forget the password ?</a></div>
                             </div>
                             <div class="form-group">
-                                <button type="submit" id="sign-in" class="btn btn-primary btn-block">Sign in</button>
+                                <button type="submit" id="sign-in" class="btn btn-primary btn-block"
+                                        data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i> Signing...">Sign in</button>
                             </div>
                             <div class="checkbox">
                                 <label>
