Account view was added

--- a/src/CTA/Views/Registration/Index.cshtml
+++ b/src/CTA/Views/Registration/Index.cshtml
@@ -1,8 +1,9 @@
 ﻿@using CloudinaryDotNet
 @model Cloudinary
 
+
 @{
-    ViewData["Title"] = "Registration";
+    ViewData["Title"] = "My Account";
 }
 
 <form class="form-horizontal">
