Fix image upload notification

--- a/src/CTA/Views/Registration/Index.cshtml
+++ b/src/CTA/Views/Registration/Index.cshtml
@@ -142,12 +142,14 @@
     });
 </script>
 <script>
-    
 
-    $('.cloudinary_fileupload').bind('fileuploaddone', function (e, data) {
-            new Noty({
-                text: 'test'
-            });
-        });
+    $.fn.imageupload("#image_id", function ()
+    {
+        new Noty({
+            text: 'Image Uploaded'
+
+        }).show();
+
+    })
 </script>
 }
