--- a/src/CTA/Views/Account/Index.cshtml
+++ b/src/CTA/Views/Account/Index.cshtml
@@ -4,6 +4,16 @@
     @Html.Partial("UserCabPartial")
 }
 
+<div class="row">
+    <div class="col-lg-4">
+
+    </div>
+
+    <div class="col-lg-8">
+
+    </div>
+</div>
+
 <table class="table table-hover">
     <thead>
         <tr>
