--- a/src/CTA/Views/Shared/UserCabPartial.cshtml
+++ b/src/CTA/Views/Shared/UserCabPartial.cshtml
@@ -10,7 +10,7 @@
                     <div class="col-md-12">
                         <form class="form" role="form" accept-charset="UTF-8" id="quick-form">
                             <div class="form-group">
-                                <button id="account-button" type="button" class="btn btn-link btn-lg btn-block"><a href="/account">My account</a></button>
+                                <button id="account-button" type="button" oncl class="btn btn-link btn-lg btn-block"><a href="/account">My account</a></button>
                             </div>
                             <div class="form-group">
                                 <button id="logout" type="button" class="btn btn-link btn-lg btn-block">Logout</button>
